--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,13 @@
-body {
+html, body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   background: #242424;
   color: #eee;
   margin: 0px;
-  padding: 0px 0px 10px !important;
+  padding: 0px !important;
   user-select: none;
   position: relative;
-  min-height: 100vh;
+  min-height: 100px;
   box-sizing: border-box;
-  padding-top: 0px !important;
 }
 
 .stars {
@@ -510,11 +509,28 @@ footer a {
   text-decoration: none;
 }
 
+.version {
+  position: fixed;
+  font-size: 14px;
+  bottom: 22px;
+  right: 2px;
+  transform-origin: bottom right;
+  white-space: nowrap;
+  z-index: 9999;
+  cursor: pointer;
+  line-height: 1;
+}
+
+#version {
+  color: #506aff;
+  font-weight: bold;
+}
+
 .contact {
   position: fixed;
-  bottom: 64px;
+  font-size: 16px;
+  bottom: 4px;
   right: 2px;
-  transform: rotate(-90deg);
   transform-origin: bottom right;
   white-space: nowrap;
   z-index: 9999;
@@ -523,7 +539,7 @@ footer a {
 }
 
 .contact a {
-  background-image: linear-gradient(to right, #a3c4f3, #9b82e3, #af88f7, #c1a3f7, #d5b9ff);
+  background-image: linear-gradient(to right, #ffd6d6, #ffbdbd, #ff9e9e, #ff7a7a, #ff5c5c);
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -531,6 +547,7 @@ footer a {
   text-decoration: none;
   font-style: normal;
 }
+
 
 .reset-data {
   position: fixed;
